force-app/main/default/objects/Appointment__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo creado para almacenar los centros relacionados con la cita</description>
    <label>Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>