force-app/main/default/objects/Appointment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments (Client)</relationshipLabel>
    <relationshipName>AppointmentsDated</relationshipName>
    <type>Lookup</type>
</CustomField>