force-app/main/default/objects/Appointment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Campo utilizado para recopilar la información proporcionada por el cliente en la gestión de citas.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>