force-app/main/default/objects/Appointment__c/fields/Potential_Client__c.field-meta.xml
<CustomField>
    <fullName>Potential_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potential Client</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>