force-app/main/default/objects/Appointment__c/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo creado para almacenar la información relacionada con los Especialistas asignados a la Cita.</description>
    <label>Specialist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>