force-app/main/default/objects/Appointment__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <description>Campo utilizado para almacenar la fecha y la hora de la cita.</description>
    <label>Time Slot</label>
    <type>DateTime</type>
</CustomField>