force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Specialist__c</columns>
    <columns>Time_Slot__c</columns>
    <columns>Comments__c</columns>
    <columns>Client__c</columns>
    <columns>Potential_Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>